--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,5 +1,6 @@
 body {
+  background: #17171B;
+  font-family: 'Merriweather', sans-serif;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
 }
