--- a/app/src/components/Header.css
+++ b/app/src/components/Header.css
@@ -4,10 +4,28 @@
   background: #1D1D22;
   box-shadow: 0 1px 2px rgba(0,0,0,.1), 0 -1px 0 rgba(0,0,0,.02);
   text-align: center;
+  position: relative;
 }
 
 .header .logo {
+  color: rgba(255,255,255,.87);
   font-size: 18px;
   font-weight: bold;
   letter-spacing: 2px;
+  text-decoration: none;
+}
+
+.header .links {
+  position: absolute;
+  right: 0;
+  top: 15px;
+  margin-right: 15px;
+}
+
+.header .links a {
+  color: #fcc100;
+  text-decoration: underline;
+  font-size: 12px;
+  font-family: 'Roboto', sans-serif;
+  padding-left: 10px;
 }
