Header links removed on mobile.

--- a/app/src/components/Header.css
+++ b/app/src/components/Header.css
@@ -29,3 +29,12 @@
   font-family: 'Roboto', sans-serif;
   padding-left: 10px;
 }
+
+@media only screen
+  and (min-device-width: 300px)
+  and (max-device-width: 667px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+    .header .links {
+      display: none;
+    }
+}
